# xaosim

./: README.md  README.org  README.rst  pyproject.toml  setup.py
config/: shmimview.ui  zernike_modulation.ui
src/xaosim/: DM.py  __init__.py  camera.py  instrument.py  shmlib.py  wavefront.py
xaosim/: DM.py  QtMain.py  __init__.py  atmosphere.py  camera.py  instrument.py  myjoystick.py  pupil.py  scexao_shmlib.py  sft.py  shmlib.py  test.py  wavefront.py  zernike.py
